--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,146 @@
+body {
+    font-family: 'PT Serif', serif;
+    font-family: 'Yantramanav', sans-serif;
+    margin: 0px;
+    position: fixed;
+    height: 100%;
+    width: 100%;
+}
+
+a img {
+    border: none;
+}
+
+.main {
+    margin-left: auto;
+    margin-right: auto;
+    position: relative  
+}
+
+.home-page {
+    /*max-width: 750px;*/
+    max-width: 50vw;
+    line-height: 1.55em;
+    margin-top: 150px;
+}
+
+.headings {
+    font-family: 'Yantramanav', sans-serif;
+    font-size: 40px;
+    letter-spacing: 0.5px;
+}
+
+.title-title {
+    color: rgb(46, 48, 53);
+    margin-bottom: 30px;
+}
+
+.first-graf-box {
+    
+}
+
+
+.first-graf-text {
+    font-family: 'PT Serif', serif;
+    font-size: 15px;
+    opacity: 0.6;
+    letter-spacing: 0.5px;
+}
+
+.emphasis {
+    font-weight: bold;
+}
+
+.slight-emphasis {
+    font-style: italic;
+}
+
+.underline {
+    color: inherit;
+    position: relative;
+    text-decoration: none;
+    transition: 80ms
+}
+
+.underline:after {
+    background: rgba(247, 128, 37, 0.4);
+    bottom: -2px;
+    content: "";
+    height: 8px;
+    left: 0;
+    position: absolute;
+    transition: 60ms;
+    width: 100%;
+    z-index: -1
+}
+
+.underline:hover {
+    color: #3A4750;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.underline:hover:after {
+    height: calc(100% + 3px);
+}
+
+.center-on-budget-line:after {
+    background: rgba(28,169,196, 0.2);
+}
+
+.pcs-line:after {
+    background: rgba(237, 0, 0, 0.3);
+}
+
+.ch-line:after {
+    background: rgba(7, 98, 196, 0.3);
+}
+
+.dc-line:after {
+    
+}
+
+.d8-line:after {
+    background: rgba(63, 19, 242, 0.3);
+}
+
+.resume-line:after {
+    background: rgba(12, 211, 28, 0.3);
+}
+
+.story-line:after {
+    background: rgba(237, 207, 11, 0.3);
+}
+
+u1 {
+    list-style-type: none;
+    padding: 0;
+}
+
+.social-container {
+    animation: fadein .5s both;
+    animation-delay: .35s
+    padding: 0px;
+    -webkit-padding-start: 0px;
+    -webkit-margin-before: 0em;
+    -webkit-margin-after: 0em;
+
+}
+
+.social-container li {
+    display: inline-block;
+    margin-right: 15px;
+    margin-top: 15px;
+    opacity: .6;
+    transition: 100ms;
+}
+
+.social-container li:hover {
+    opacity: 1;
+}
+
 .social-container a {
-	border-bottom: none;
+    border-bottom: none;
     display: inline-block;
     text-decoration: none;
 }
@@ -18,17 +159,16 @@
 /*Add Experience*/
 
 .footer {
-	font-family: 'PT Serif', serif;
-	font-size: 15px;
-	opacity: 0.6;
-	letter-spacing: 0.5px;
-	margin-top: 30px;
+    font-family: 'PT Serif', serif;
+    font-size: 15px;
+    opacity: 0.6;
+    letter-spacing: 0.5px;
+    margin-top: 30px;
 }
 
 /*.hiddensecret {
-	display: none;
+    display: none;
 }
-
 .hiddensecret:hover {
-	display: block;
+    display: block;
 }*/
